# ChangeLog for dev-php/smarty
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/smarty/ChangeLog,v 1.121 2013/10/21 19:39:25 olemarkus Exp $

*smarty-2.6.28 (21 Oct 2013)

  21 Oct 2013; Ole Markus With <olemarkus@gentoo.org> +smarty-2.6.28.ebuild,
  smarty-2.6.27.ebuild:
  Version bump. Bunch of security fixes

  09 Oct 2013; Agostino Sarubbo <ago@gentoo.org> smarty-3.1.12.ebuild:
  Stable for sparc, wrt bug #435618

  09 Oct 2013; Agostino Sarubbo <ago@gentoo.org> smarty-3.1.12.ebuild:
  Stable for ppc64, wrt bug #435618

  07 Oct 2013; Agostino Sarubbo <ago@gentoo.org> smarty-3.1.12.ebuild:
  Stable for ppc, wrt bug #435618

  06 Oct 2013; Agostino Sarubbo <ago@gentoo.org> smarty-3.1.12.ebuild:
  Stable for alpha, wrt bug #435618

  06 Oct 2013; Agostino Sarubbo <ago@gentoo.org> smarty-3.1.12.ebuild:
  Stable for ia64, wrt bug #435618

  02 Oct 2013; Agostino Sarubbo <ago@gentoo.org> smarty-3.1.12.ebuild:
  Stable for amd64, wrt bug #435618

  01 Oct 2013; Jeroen Roovers <jer@gentoo.org> smarty-3.1.12.ebuild:
  Stable for HPPA (bug #435618).

*smarty-3.1.12 (30 Mar 2013)
*smarty-2.6.27 (30 Mar 2013)

  30 Mar 2013; Matti Bickel <mabi@gentoo.org> +smarty-2.6.27.ebuild,
  +smarty-3.1.12.ebuild, -smarty-3.1.7.ebuild:
  version bump (smarty3 doesnt use smarty-docs anymore), cleanup

  21 Jan 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup as talked with him

*smarty-3.1.8 (22 Feb 2012)

  22 Feb 2012; Matti Bickel <mabi@gentoo.org> +smarty-3.1.8.ebuild:
  version bump

*smarty-3.1.7 (28 Jan 2012)

  28 Jan 2012; Matti Bickel <mabi@gentoo.org> +smarty-3.1.7.ebuild,
  -smarty-2.6.24-r1.ebuild, -smarty-2.6.26-r1.ebuild, -smarty-3.0.7.ebuild:
  version bump, remove old, obsoletes the need for dev-php/smarty-docs

  12 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> smarty-2.6.24.ebuild:
  ia64 stable

*smarty-3.0.7 (12 Feb 2011)

  12 Feb 2011; <tomk@gentoo.org> -smarty-3.0.6-r1.ebuild,