@@ -9,21 +9,15 @@ DIST Smarty-3.1.8.tar.gz 199634 SHA256 49d3827cf84e8943a9bbf7e4b7229b1880cbb864d
 DIST manual-en-3.1.8.zip 413723 SHA256 83c06b1acc3e921b08c6c0076cc1ea888654244d3fbb5cc2f2a78d17a41dceae SHA512 644fda80416572cc8e2e7e757ee76afdfd1ff466c923a57091fc31182bc2a53e71d1a0a0d4970ca91f93ff60795ce943a14da2333af97b2eb4fa4e0802798fa1 WHIRLPOOL 476a56af0bd85c259a887ca221b260027ace493af17c528c8dd8d41c0767b6a77f0cc5e57783990aabd0839b5e7380056ad0081429c28bf56cc9836aa8445e00
 EBUILD smarty-2.6.24.ebuild 1371 SHA256 bee1c19c1e8724740e8df03795078b6db0941849a63499773fdde838746715e8 SHA512 1610e87280054911be9954402579563c5f2fdac900a44219e22ed4b5f617155257cdaa76644d36192a444a9ed443a81f787630b5ef17cead9c20947164a31140 WHIRLPOOL 58d6642db6fbe77abfd71efb783643f42eeb6150a8b155c1fe827ac1ba722050ec96d26b847d9cb1f4274fbf2ca670d96b353469769f1bfbf2ec7d3c0f4e1950
 EBUILD smarty-2.6.27.ebuild 1055 SHA256 6bbaeafe941f60424af797dbd706733685751379ca183269c5422cac201afca4 SHA512 6e5ac0b2df9cf7595b2bec67439bf569a509723c872c83e6f2ddb8c4111cf640564e0def1ef0c108fc709593e6a6712d1ed4c9ee7f1e9ef8b92a023e8efd9c34 WHIRLPOOL 073457cf83f5c8dd03621c48cd61686fdc3ea17acfc61c0ce807168b3b422d4792eea1931c60160b50e4bd1d85b02fa3f0535f512c782705f76d5bbadcf18612
-EBUILD smarty-2.6.28.ebuild 1060 SHA256 87790cd1dee5a7d140f78f417538f691e0b4b25e5164d612d070d4d5c10498e2 SHA512 c9d7e7420ec13586f751e3b7f25bb87bfdf4b7776ec363d814b109220991f9fe4b7247174c765801b68752487499cb8df9f300ba03aa662a9b484543667abde9 WHIRLPOOL 68b316949e66d6e28d811903192e762d0805f9dcbbddf42b50318db70951507a7b621bf37dfc053122a9dc9486c16fb4bfd0dbc87fce2a94c8661e1f33b816cf
+EBUILD smarty-2.6.28.ebuild 1053 SHA256 e86ee6aa2109fa7416fe431273a7e17881fada841167f7b681657de59acfcf65 SHA512 21a4bf34968d935f38ec7ca9f5b008f398defe035c1a9c70501b47dea8dd2461358a170d7dde67a0069909220b6c7425af59646789af3893a002366ecd41b868 WHIRLPOOL a11a030ac5bddb358dd6ed45823d8a70ef2cc9c6e150d3b741c4ffabaa19736a6fd7821861461cadb50c02bfe77649cf856a1e055e290fa1ee8a70a0a6ca9a47
 EBUILD smarty-3.1.12.ebuild 1136 SHA256 4f63f766e68d9d9f3274c05dcf00acfb3fc29894c21958416ff78c9400e5592d SHA512 806c6e880b1ce1c9f7a16e6ac730c411fe409e998b50cdb6854f04d73bdc1242b26114050879e9d6bce864ba6150de228bf186cd4a5bcd95512b90281888b6b2 WHIRLPOOL 13fdab7cf76418ef63d42a7aa154da896f8428e823ab2c2ff7861b22a3ac917be89308ab306e63b2329d2500c61de5c05fdc37626cc915211bbc00159c23cabc
 EBUILD smarty-3.1.8.ebuild 1288 SHA256 f15eb816ef44b2971971f6590b76bfc0e5c185126b9808c2ddb636ce63d76959 SHA512 ea9d407298fb8912686d61b2b66bebb17a1d54e5bc5a62832ca0957cf51e529e1a93afa25abf109dc3efba9c9e4e41b0d5ce563a385d3361fbb5a2cb033f4322 WHIRLPOOL ed272e2d3fe57f1bf492c2b58ebc6adec95cc0ddf68fd8d3c4794f76cbdaab3334acd2c2d2810935d1472878845d6403de0dc56a53227b8039b1b2f8b61c6c4d
-MISC ChangeLog 15351 SHA256 5c7c6292295e4b739dd766326541b9f2515a937ff182be8f68dcca6dea11f7dc SHA512 5f59608c972322b167a4d647387b2e868cbb625825ee17a1b0ec45a26594ec4bae1d97d1b5eca6d165a5991a982172fba61ea08ad1d39cf26657b9578ca8b83c WHIRLPOOL cd14f4128021a8dc887bef2cd1b345ecbb4475241f70c4f2a402f465420740109fc77f10893824f30533d2b468fe18bda0f138d37005d55fe44715924b3e882c
+MISC ChangeLog 15448 SHA256 453994ebfb89a47e80a4e088d7149d938f1fb6dd006eb118fdf495eca55c6795 SHA512 019546627eb7b02913dbf0d2c028b63e7f9ea0603c25c2d300b219ad08a8c57b087effc238c11a0d857034198928f02aa217a5f0553456b4875aee5b1930fcc4 WHIRLPOOL feca464d1f23393f7f5f607c667c6446a7dcf81a6985e9b413f82b98ee91fe68e2fbf9b86f8a602e5ad271a1dff44e0e1be32c9341af0d62b0ff507c696332f9
 MISC metadata.xml 417 SHA256 0f3577fdb1ae30c381e73047b39b57a7f8f1787a57160c9ad849ff178a9b9b41 SHA512 a8b2395d0c0bdf5e887fe33cbbf96ac7c3396ad6bb2da8bb1be844e1e9ecb70c9764462bc54e7384a7b3ef12992fb94f032dcf44831f96542c6009479c863373 WHIRLPOOL c9bae9bf45119228b7b9bfef46274e66aef3d53d5365791c77d9393bee22eb92dbe33b1bd91d88f73af0537113b87243b5ddc243e328ba48850c9ed0dbd81b46
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQF8BAEBCABmBQJSZYMCXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyOEZEMjNGNzBENkE5N0Q2Q0ZFMkFDNDA2
-QkFCNEFFNUM0QTkyQkY1AAoJEGurSuXEqSv1fAMH/jZs5tCMfcAqv9yUcotCS1hU
-kGye0zrlIu40g2qbjLJJ4yGoZyhkqQqj3CHzQRenSTZQkkTXSUn7ORYVNZi466qm
-cWTzAmAu7KjWsPINKlIJdz7lAVPyLBi4lNeF+5oRvcmz7rqpjHbqTuVKDM8nA0xf
-Qqq6HWPC5n2qwXRRP0jyUNwKcTV192F2D88rnwzATa8XnJ7LaQZ4olThq0i4WGI5
-NaVXuBRhn95PB6rgr/cuAAirxR+ZOyoArL27gGPCu3OT+CPXasOoLpr+3mZwOi0y
-5fPJad7l6ofILh+4Ww4Aigi/ESoa4qI+GTgjfMz1sz9ILcsWVymYYPEtNTq1Tf4=
-=7JVy
+iEYEAREIAAYFAlJpGGYACgkQVWmRsqeSphNSMQCeL6ODwNTTwiWKn4Hh3RazYRjO
+ATwAn0+f6GIvzCJgvRHXaX+/3hOtfuet
+=xqpR
 -----END PGP SIGNATURE-----
