@@ -6,13 +6,13 @@ DIST yard-0.8.3-git.tgz 1080414 SHA256 7eb609ca07f075ba79ba3cacb3bf71552c5823038
 DIST yard-0.8.7.2-git.tgz 854200 SHA256 90905223f0b3308c36c5a5387d1d36588e85bd804d700b7e20c5305fe37936df SHA512 107d9f354eddb71fdefb0664199c7f66053028e57056e32d87b38a5946bad47ad3a607f9fe7f6b672ab625880205c335df88325a2f0ab676da5d96ffe9539be7 WHIRLPOOL 355ae08966dd95aef16af80323321a5f754ceced3fe79056f674c3f5263b02bca7037e16a5f0555e656e63d907b7a82419954a917fb73019c29884e491feddaa
 EBUILD yard-0.8.3.ebuild 1649 SHA256 988343aff13649df20f315001e9079dc43b4ec9eb882cc6022797242d4255c87 SHA512 73bc967e199019cbce496d570fe1ed0fcf2a166864a2cc7924756dc5d47d59c9a231e4b3ff8df3778dcf738c41c66f588075a08a41a11a3686dc3ba3ed1426e5 WHIRLPOOL f3dcf18d53d5fa7c6e46284865ea162415c46c6982d91f958f65d90678b8135a2500124390bd368e429d94caf18eb8f60d1d46d162e35ba8e36690546eea29fc
 EBUILD yard-0.8.7.2-r1.ebuild 1280 SHA256 c47fc6809a92e767f03112efbbad2eb3f45f6afb2c59ca60ec6f6ea2cccf0f97 SHA512 62615d5cf54fb39f8a684596c75b070cd329dda2fa63b37d90fa6f037ce40c50e00edb194f15d8fd02958c6cf6354ab3fc2d811346ce014fedacd2477f7f157f WHIRLPOOL 7f11207b6617e219e409c6f8bbc7b68b9ca23b14bc78f8ff4fdc604bb386bc7d71a13cb63d68686cfcdbcc6178889651e7da740e0b7484c0747173af10789227
-EBUILD yard-0.8.7.2.ebuild 1219 SHA256 3794aa5129156249ab36dd46d1c55ce5088bddf3d6d1101bf51decae2872e659 SHA512 76697b1770b32459538d862da6b4f5c5a1af8881b545760b05706378411a65d775269548087da2e6dc99a4e421be04d1dc2581a260050496e343b8548fbab982 WHIRLPOOL 14677a1b46a701a905f38cb0a3030a98f7141f524c8ccd65e9ea0d62d609afbaa5477d081030e03beeb359f26dd3afcabaaa236d6dc703638f8da82569b02136
-MISC ChangeLog 7579 SHA256 4a09d6d8e11b14b204a275ab7fa93e06d19f42aaf2fc5a7d9d10b35169b403c3 SHA512 9e461118734918a0a327bd2125055725bdbd9fd78e90254d06da302900c23526da66a3efd7c3d8671872ac2aff2efdddc4e40a3517b0892bc0d5ab973bfa4371 WHIRLPOOL 4735cdf6d38e8ef7a67caa1e0d45cb52723a675d5f8d4a60f75dbffd9082ad49be4a392ffc89e9db49bdeb55f7c69ffd92c8b16ec7e1e698e50d086ee016c93e
+EBUILD yard-0.8.7.2.ebuild 1216 SHA256 2818073d34a1ddb8d9c68d1a0ac5ae44abfc4afd27b9429b68c3d4548a8b7de0 SHA512 25af5da0e4132db5ce63b19a31393eb354a5058e083ebb1483e75a1352bf48ef4b7d04eda7a3a5b1c04d540cad629dc64092deabafb00550ce83f14f6b0dca74 WHIRLPOOL 6de7d18b2080f6e329340c785cf610fde503e527fb45b75db8a274e30eb7e7dde41102554d6244c940421754face05594cbe1c179e461c1ce6ea8a5e0bdbc23c
+MISC ChangeLog 7678 SHA256 381100f350715bb4338b2e69ab99ad2a4d01e2a17eb258676cc8538173fd1103 SHA512 53c9f7a5658a26bbf8c67b9d20b305e7091827967c2013fee46a905aacdc71aac448a53731366b2932dc2e002e9506bd478da9536bc210e28803d8b25cc7590d WHIRLPOOL 2d5edf9b9f9bfb0a7a59d99f2f8c24897195b29dcc877cc9ad0a6fd52a2d407dad5000e079f9492f7fb9416bcce809910641befac955529178ccfc39c7e9040d
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlJlXe0ACgkQiIP6VqMIqNcD0gD+JMu6C6Sz3mDHVPvIvI1qkfqP
-mFarXEQFOtz+qALojnYA/0rLS6LkFzOm+NiZZ59UddAm6lrFo47Alj6xPW8vGt3d
-=xGVj
+iEYEAREIAAYFAlJpGZAACgkQVWmRsqeSphPqdwCeOqctuIwJ5KpDevi2cjZFEO8t
+4eIAnAqCBFRb+pAb7RXXs97ezzaIZ9rG
+=yENZ
 -----END PGP SIGNATURE-----
