@@ -3,10 +3,10 @@ DESCRIPTION=A template engine for PHP.
 EAPI=4
 HOMEPAGE=http://www.smarty.net/
 IUSE=doc
-KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86
+KEYWORDS=~alpha ~amd64 hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=LGPL-2.1
 PDEPEND=doc? ( =dev-php/smarty-docs-2* )
 SLOT=0
 SRC_URI=http://www.smarty.net/files/Smarty-2.6.28.tar.gz
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=402089f4e68ab428187b8541501cf445
+_md5_=f557efe35a36f4a4ff506faeb520dae5
