@@ -5,8 +5,8 @@ EAPI=4
 HOMEPAGE=https://savannah.nongnu.org/projects/crmsh/
 KEYWORDS=~amd64 ~hppa ~x86
 LICENSE=GPL-2
-RDEPEND=>=sys-cluster/pacemaker-1.1.8
+RDEPEND=>=sys-cluster/pacemaker-1.1.8 dev-python/lxml
 SLOT=0
 SRC_URI=http://hg.savannah.gnu.org/hgweb/crmsh/archive/51379136d692.tar.bz2
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	5f912199ed4fdfb0bfbde29c7ac7dbdb	eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=e3ba7af6c724be0ca5bb0888390b3ce1
+_md5_=2b409b0fb02e5e771b633a005aa49311
