@@ -4,15 +4,25 @@ Hash: SHA256
 DIST 51379136d692.tar.bz2 215842 SHA256 ec9bb8da1a997c1adecae5aebb7b1e3f03b2ac8ee8f103216025c559e58a0690 SHA512 f6e6cbe04a3658361f057eb1a4fc1865a15d29425bacc3dfeaa69226a8eea68b546c8f2ba0c85152475fa9f5fae5a3509f22eff8581f76c43154a2954e29bc34 WHIRLPOOL 6cdd8c9687469cad20b8cefb4a880d09036c5407bbd88d2fe352ecef1e5817a28a2c1a3865e222d5eec34029ec2e99d2d34e6fced65d0689eac4022a3c952413
 DIST ad8279d42fd4.tar.bz2 243229 SHA256 3ff19f035b8539c3972221aa1bad85f71c1635eeddd01e64eb17b6abf6669aa4 SHA512 3ff87ff0f007450c52094415dd955f4b5d2a99d21ed26483257cb418726970b814eb030078a307709eb7c6cedc98512bea1b464659591017bca1c061a0e7fca9 WHIRLPOOL 2b199472b05a72817057f238ffa12d79b040a2c8c9bea1604508f53bb7840df87366fcfaaa55f60f89b3c0ca7cc372aadf9c6ae57f57450cb26e504c109605db
 DIST ef3f08547688.tar.bz2 222930 SHA256 628ac6bfe802b81a3223b4f5fad97124fba82fa18d7990a7247fad74ad7234af SHA512 186377e52d5be5b80b96613243af302c8795efbcbc7dc5bfea0b3090157fdce9e2861dbacb1ff0e4519c7301c6c2a5a04a80973476e4bd5079a9f70c2467ac2a WHIRLPOOL 10c00f73af62e5540504f0a96e94557bb3592172dd54a91a97d6d07ecae2e877f2645cb07d3b97314f4d99f1ac80958d0589a59d6dff0655bf00bba379bf6101
-EBUILD crmsh-1.2.4.ebuild 799 SHA256 0911cd9081609150b70fbb5f6687371d2e7db7ea41727d4d08a7bc0889eb1d2b SHA512 de0d726deff4b856b889c4e7ec6481e4bf360d61dbd9a2855b8cc2b4d08ad3b520c8e9d877aaa0f7d4e27c169ed3d1e5d393e63b88d2dc41e016ad986ea31853 WHIRLPOOL 64ffd62fcfb163e341aef3f406c68324434e9dd33fb314f15d5bbace0e14a69fade5cf30c9c2e72c38296d875239eea113d46b641378b9928a71709778970171
-EBUILD crmsh-1.2.5-r3.ebuild 1196 SHA256 e95196a6d92b54a71d123a9db4f198a2f0f9022418e8b2d0629e3c85f733da3c SHA512 a025e67cad061a48c33203ec83bbfc8b78b1427003ed3aed04b8855d3d04eaa6f911fae7737f5e3f2073d7f9578a33ca46734267eee541573f0e469e4d38e771 WHIRLPOOL 130cd358ee8a251db22f5bce6c9bd519d2f03cd2563471a408c084d9dd7f7d6f33c5903e4f0a28d1899f2b7d7a663d06e7041d75fe0182ffd38425592830fbac
-EBUILD crmsh-1.2.6.ebuild 1197 SHA256 dc3230a3153267fb08211091f09b19f49609b3f996b3c0e8722c12182433a0ac SHA512 97b44148a2ec46878426a52a4496a60e9519e9b5a3d6e8b36c54fd3f76919d2ad0fb51d00ae1794eb4ea75454f45b3f287f28735779b4d1c3bb4c027248f0e9f WHIRLPOOL 36ed634141d64b486c5d7f6dfde5ddd221e4e13794634c6d2e2f8a850ff17e375ad3dbff496bbd00e7b8122bca18b1665805296301a44785bda7a6cbc0c7a7d3
-MISC ChangeLog 1400 SHA256 fb008d95f74c94ac4e2c79ce8f93056be36bc8334b6ca91034f9538a8a146e2f SHA512 44d179fcaf50c835a2abe6a65711bddaac32a8610213b9a61b1d93e28fb8c3557f6992fb8644287eb6d030d6be4fed6fd6342e39f559f2d3f31a58f89c6dcb72 WHIRLPOOL a6a57247ceb63b68c84da41c6886720a96b96ef9b8661bfe891b3e9b2312d3f3ad9baed4da33c3bff286a7516944b206e37ec826a196a8080677ef6c7917f488
+EBUILD crmsh-1.2.4.ebuild 818 SHA256 cd258c2b2dac05423333a46b8fda1846802ba4db1a385ca8f19cae44f63037be SHA512 25b8997cff102cde9be9d872ae8c08bf143f892af81f4247311480c96d72dcc3a494d14aacf782c5ab75de03b7fc095391a451866794e5f8816e3f846e959db9 WHIRLPOOL cfaf47d5098dd09f315589cb9f343e2ddd1a145ddad4a6bc3d13c7c034de0030525100f844a2f8c5b62061443056db3251f2e957bbe5d016c7a845e8134bb19c
+EBUILD crmsh-1.2.5-r3.ebuild 1237 SHA256 f32a0af76906ba0dd95360c5aa89828a7cde6a96b74c647981bd60130d5b77b7 SHA512 82fc113964541e50224634be7f1d312d04152e1f472bda701047cce353de5374cd5d8b3b00f82c7e02639f0aca042d7021a9565aa29747b7203c1faf474757dd WHIRLPOOL 7ea3753c128c577bf316bad73ca920de928dc5b2531a5bcc06eea9845601d79a5fcc186a8690d4fff6a704e488f261563497071bc334afd2ad875b6c7eb7cf2d
+EBUILD crmsh-1.2.6.ebuild 1234 SHA256 30fce7a87bc86d6cc995e113e76a7f4e70b68477c0a1a32d63a416047db9a10f SHA512 ea7300dd6c45ca53b35daaa140f875ed22b24e7967b5b9fa097c54187984b941f662372b1eff252707a6d67b82960ea72cd7eb990221cea64f747c275582c04e WHIRLPOOL b8c0afb4bd1d3af71be6c26491ca8807a96a007f640e559b7203c4d663ef8af8ae106ba9a6435e85ec8a2c977d0b6131a3347b56bd225518a10972fbda0fd554
+MISC ChangeLog 1604 SHA256 38b313de38374f49f6cad0a7f59e62a6232bdbf0b4ae38c599d45a4f422b1c3c SHA512 bd3b7310792e6364514f5a9e276776bfd5e857a686c2ad72eedc36284845b09f5102450fc6abea5c798470ef04a5bc9d7c4009d160d433afd096a8f5a200c6e0 WHIRLPOOL b395df4267a60a9d9895ac225bc8f4c1b177154a9b55c566b1bab4352ed3fc82a9daefc1e81b355b0174cbaaa59eef8b902bad1e6166f49335e5ab01a94d7c12
 MISC metadata.xml 162 SHA256 ba8ac4b0fbb2acb09677330e980feed7de66b52d6ec4ee0ff9e44cccea58fa7c SHA512 2f5b58b83e2be686d8c7a0151b76ec40b9139b62065464f629b8f27d0e46d0a3e314e85c5d8f376372dd4b66ec8d21570f043a7bbeba3684a40517fa1b04bc37 WHIRLPOOL e9aa5ace065aeac9ec418a0bf1fba7321e970f49b853af8201983aa73563ec8a9ecc6a8177d378b7f122178667501865dab9f16136b09ab7cf08a46faa179d3a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlJf1jwACgkQKiQSS7ZY+hPWGwD/Qg6oqH0w1pQN4/uBE1zZWhxE
-uQwIZWYPaK+G0ViKu2AA/jrMPh6xn4SJa7cmJJ5tJwfww3Jz+b6p1LxEvC6LpnHW
-=isLn
+iQIcBAEBCAAGBQJSaRN0AAoJEF0huFKJUZL5ilEQAKc/tW2bU3VWu98kucKnuywL
+dZ2lm11gCLmlNGRdV3Q9fcwjWdbG57x4NL2y/C8y0ecv89F4iZSE2ORQByOE9RoW
+scqRMo4DpqMVtW+bfFDrnIYTrIGRIe4UkoccDWX/YGniIJTLZ5xDI/QH7/wz55m+
+n1tgyi9vikFZUdZ1E5DW5JpGwQ0MBlVUnOaxC54NSS1KwJ0yMaou2USZ83KECwk0
+OylyVgS7zdMQ8N5ibbzlqLBFLSgRq4y3V5W3QA8n8c8CGDkjh3lI9b0hBv5RnsRE
+ZsgFYJmO3MkEr3MundhmlPsiZFYWtp+4YcQ03OKA9zkdCUduRvEeTSIVuraXtBpV
+bMmU0Q9Y9FKD4eLBwFKktFxUZpmm+FEnZXl+Amif6F0VdeLCnDQq9DDnmkgLhFwK
+beh+0rB5YKiruH7CHKs1UTcthAAVsVY96XNvnDvOzWZRnKusyVsVCrqzuDlHi4nK
+IzfEse7PASFEoYCiUw17cy1pLdZs9Ng+5qePJyzfcQZGaCtQL6K/74W9oY4tMzhR
+eIw8vHZjXOPdZeRQMG7tBH5BpzF9uWuIDIJUoxv55Gn/M7CaxgDyYHcA90IVe/4G
+3jScrhKjOJ2LAoIj0Vmsi2cHWXmLIakQitNfbEoBpJpjqEEaq/dmrgsAVusPtIPS
+q9bsIWu5Iogjch1Zf6s0
+=RbCQ
 -----END PGP SIGNATURE-----
