@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/yard
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/yard/ChangeLog,v 1.58 2013/10/21 17:01:27 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/yard/ChangeLog,v 1.59 2013/10/24 12:58:49 jer Exp $
+
+  24 Oct 2013; Jeroen Roovers <jer@gentoo.org> yard-0.8.7.2.ebuild:
+  Stable for HPPA (bug #488914).
 
   21 Oct 2013; Hans de Graaff <graaff@gentoo.org> -yard-0.8.7.ebuild,
   -yard-0.8.7.1.ebuild:
