@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/crmsh
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/crmsh/ChangeLog,v 1.9 2013/10/17 12:21:11 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/crmsh/ChangeLog,v 1.10 2013/10/24 12:32:45 xarthisius Exp $
+
+  24 Oct 2013; Kacper Kowalik <xarthisius@gentoo.org> crmsh-1.2.4.ebuild,
+  crmsh-1.2.5-r3.ebuild, crmsh-1.2.6.ebuild:
+  Add dev-python/lxml to rdeps wrt #489246 by Sergey Popov <pinkbyte@gentoo.org>
 
 *crmsh-1.2.6 (17 Oct 2013)
 
