@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/smarty
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/smarty/ChangeLog,v 1.121 2013/10/21 19:39:25 olemarkus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/smarty/ChangeLog,v 1.122 2013/10/24 12:53:56 jer Exp $
+
+  24 Oct 2013; Jeroen Roovers <jer@gentoo.org> smarty-2.6.28.ebuild:
+  Stable for HPPA (bug #356615).
 
 *smarty-2.6.28 (21 Oct 2013)
 
